# securebootfuzzer

./: .gitignore  LICENSE  README.md  pyproject.toml  pyrightconfig.json
src/securebootfuzzer/: CliParser.py  Utils.py  main.py
src/securebootfuzzer/Machine/: CpuArchitecture.py  VirtualMachine.py
